raspi-cluster-assets/example-with-tls/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amf-cluster-service
  namespace: amf-cluster-namespace
spec:
  type: ClusterIP
  selector:
    app: amf-cluster-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
