raspi-cluster-assets/example-with-tls/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amf-cluster-ingress
  namespace: amf-cluster-namespace
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - amf-cluster.duckdns.org
    secretName: amf-cluster-tls
  rules:
  - host: amf-cluster.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: amf-cluster-service
            port:
              number: 80
